--- a/1.md
+++ b/1.md
@@ -9,8 +9,13 @@
 <p><a> <center>2.ColBreakz - Mind Control </center></a></p>
  <center><embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="550" height="75" /> </center>
 <P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
-      
-     <p><h4><a href="0.html">上一篇：【置顶】关于网站</a></H4></p>
+      <P><h1>音乐MV</h1></P>
+      <P><a><center>1.waiting for love</center></a></P>
+<P><center><embed src="mv1.mp4" width="300" height="150"></center></P>
+      <P><a><center>2.wake me up</center></a></P>
+<P><center><embed src="mv2.mp4" width="300" height="150"></center></P>
+<P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
+       <p><h4><a href="0.html">上一篇：【置顶】关于网站</a></H4></p>
  <p><h4><a href="2.html">下一篇：关于黑苹果安装和配置的一些总结</a></H4></p>
       </div>
 </body>
