--- a/1.md
+++ b/1.md
@@ -11,7 +11,7 @@
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/ColBreakz - Mind Control.mp3">长时间加载不出来请点我</a></center></H4></p>
  <center><embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="300" height="50" /> </center>
 <P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
-      <P><h1>音乐MV</h1></P>
+      <P><h1><center>音乐MV</center></h1></P>
       <P><a><center>1.waiting for love</center></a></P>
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/mv1.mp4">长时间加载不出来请点我</a></center></H4></p>
 <P><center><embed src="mv1.mp4" width="300" height="150"></center></P>
