--- a/2.md
+++ b/2.md
@@ -1,1 +1,27 @@
-
+<html>
+<head>
+</head>
+<body>
+      <div style="width:100%;margin:0 auto">
+          <p><h1><center>关于黑苹果安装和配置的一些总结</center></h1></p>
+      <p><h3><center>作者：Windows7小耿</center></h3></p>
+          <p>实际上，安装黑苹果并没有那么难，只需要有一台电脑和一颗爱折腾的心。</p>
+          <p>准备工作：</p> 
+          <p>一台运行着Windows的电脑，要求系统在Windowsxp以上；黑苹果硬盘安装工具；分区工具；黑苹果镜像文件（BIOS用.cdr,UEFI用.dmg)；easyBCD（BIOS）easyUEFI（UEFI）</p>
+     <p>1、打开分区工具，压缩卷，分出一个10GB的主分区，不要格式化；分出一个大于30GB的主分区，不要格式化，作为Mac系统盘。(OSX10.11以后的版本需要格式化成exfat格式，否则看不到这个盘）</p>
+       <p>2、打开硬盘安装工具，镜像选择Mac镜像，安装盘选择10GB分区，写入（写入可能会假死，请耐心等待。）写入完成后会提示AF：SUCCESSFUL 或者AF：FAID （第二种，请自行百度怎么将硬盘标识设为AF）/>
+  <p>3、打开easyBCD或者easyUEFI，添加启动引导项目（变色龙HJMAC.ISO,四叶草CLOVER.ISO),或者使用BDU写入到U盘。然后将驱动放入（变色龙s/l/e或/e/e;四叶草efi/clover/kexts/10.x或others)</p>
+  <p>4、重启进入引导，选择10GB分区,回车进入<p>
+  <p>5、不出问题会跑码进入Mac预安装程序，如果出现五国错误请自行百度，远景论坛有详细的五国贴，要善用论坛<p>
+  <p>6、出现Mac实用程序时，选择磁盘工具进入，格式化Mac系统盘为MacOS拓展（日志式）或者APFS。</p>
+  <p>7.退出磁盘工具，选择Mac系统盘，安装。（如果出现没有XX符合安装包，请重新运行安装程序，使用终端把时间调到2016年，继续安装）</P>
+  <p>8.重启，进入Mac系统，经过设置，进入Mac桌面。</p>
+  <p>9.配置：下载万能网卡和声卡驱动，利用驱动安装工具安装到S/L/E下重启。</p>
+  <p>10.使用变色龙安装程序把变色龙安装到硬盘，安装结束；使用四叶草配置程序挂载EFI分区，将四叶草U盘里的所有内容复制到EFI分区里，或者运行安装程序</p>
+  <p>11.显示卡驱动通用安装：intel的集成显卡一般都直接驱动了，英伟达的驱动可以使用官方web driver，但只支持到macOS10.13,AMD的显卡有一大批是免驱的，但是不免驱的也有，这时就需要修改系统文件，注入显卡ID或者dsdt打显卡补丁。</p>
+  <p>最后，祝大家折腾愉快，折腾成功！</p>
+      <p><h4><a href="2.html">上一篇：【置顶】音乐集锦</a></H4></p>
+ <p><h4><a href="4.html">下一篇：【it之家】Windows10 20H2，开始菜单的新变化</a></H4></p>
+      </div>
+</body>
+</html>
