--- a/4.md
+++ b/4.md
@@ -6,11 +6,11 @@
           <p><h1><center>【哲学】waiting for love</center></h1></p> 
              <p><h2><center>作者：Admin 转自：@茶几君梦二</center></h2></p> 
                 <p><h3><center>哲学可能会迟到，但绝不会缺席！</center></h3></p> 
-                     <center><embed src="w.flv" width="250" height="150"></center>
-       <p><h3><a href="w.flv">分流节点1</a></H4></p>
+                     <center><embed src="w.mp4" width="250" height="150"></center>
+        <p><h3><a href="w.mp4">分流节点1</a></H4></p>
         <p><h3><a href="https://www.bilibili.com/video/BV1qp411d7C7">分流节点2</a></H4></p>
         <p><h4><a href="3.html">上一篇：it之家】Windows10 20H2，开始菜单的新变化</a></H4></p>
- <p><h4><a href="5.html">下一篇：【四千万合影】我的烤面筋，融化你的心</a></H4></p>
+        <p><h4><a href="5.html">下一篇：【四千万合影】我的烤面筋，融化你的心</a></H4></p>
     </div>
  </body>
 </html>
