--- a/1.md
+++ b/1.md
@@ -14,7 +14,7 @@
       <P><h1><center>音乐MV</center></h1></P>
       <P><a><center>1.waiting for love</center></a></P>
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/mv1.mp4">长时间加载不出来请点我</a></center></H4></p>
-<P><center><embed src="mv1.mp4" controls width="250" height="150"></center></P>
+<P><center><video src="mv1.mp4" controls width="250" height="150"></video></center></P>
       <P><a><center>2.wake me up</center></a></P>
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/mv2.mp4">长时间加载不出来请点我</a></center></H4></p>
 <P><center><embed src="mv2.mp4" controls width="250" height="150"></center></P>
