--- a/1.md
+++ b/1.md
@@ -17,7 +17,7 @@
 <P><center><video src="mv1.mp4" controls width="250" height="150"></video></center></P>
       <P><a><center>2.wake me up</center></a></P>
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/mv2.mp4">长时间加载不出来请点我</a></center></H4></p>
-<P><center><embed src="mv2.mp4" controls width="250" height="150"></center></P>
+<P><center><video src="mv2.mp4" controls width="250" height="150"></video></center></P>
 <P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
        <p><h4><a href="0.html">上一篇：【置顶】关于网站</a></H4></p>
  <p><h4><a href="2.html">下一篇：关于黑苹果安装和配置的一些总结</a></H4></p>
