--- a/3.md
+++ b/3.md
@@ -16,7 +16,7 @@
   <p>去年，Windows 10版本1909更新WHCP要求于10月宣布，功能更新于11月发布给消费者。今年的WHCP要求详细说明似乎很早，也表明Windows 10 20H2的发布时间可能比预期的要早。</p>
   <p>Windows 10 20H2更新将包括新的“开始”菜单，Alt-Tab多任务改进和基于Chromium的Microsoft Edge浏览器。它还将包括Windows 10版本2004的最新累积更新中提供的修复程序。</p>
       <p><h4><a href="2.html">上一篇：关于黑苹果安装和配置的总结</a></H4></p>
- <p><h4><a href="4.html">下一篇：不可用</a></H4></p>
+ <p><h4><a href="4.html">下一篇：【哲♂学】waiting for love</a></H4></p>
       </div>
 </body>
 </html>
