--- a/5.md
+++ b/5.md
@@ -6,7 +6,7 @@
           <p><h1><center>【四千万合影】我的烤面筋，融化你的心。</center></h1></p> 
              <p><h2><center>作者：Admin 转自：@还有一天就放假了</center></h2></p> 
                 <p><h3><center>梦想三巨头系列！</center></h3></p> 
-                     <center><video src="FJJ.mp4" width="250" height="150"></video></center>
+                     <center><video src="FJJ.mp4"controls width="250" height="150"></video></center>
         <p><h3><center><a href="FJJ.mp4">分流节点1</a></center></h3></p>
         <p><h3><center><a href="https://www.bilibili.com/video/BV1GW411g7mc">分流节点2</a></center></h3></p>
         <p><h4><a href="4.html">上一篇：【哲♂学】waiting for love</a></h4></p>
