--- a/1.md
+++ b/1.md
@@ -6,7 +6,7 @@
           <p><h1><center>音乐集锦</center></h1></p>    
           <p><a> <center>1.K-391 - Summertime </center></a></p>
           <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/K-391 - Summertime.mp3">长时间加载不出来请点我</a></center></H4></p>
- <center><embed autoplay="false" src="K-391 - Summertime.mp3" width="250" height="75" /> </center>
+      <center><audio src="K-391 - Summertime.mp3" controls="controls" type="audio/mpeg"></audio> </center>
 <p><a> <center>2.ColBreakz - Mind Control </center></a></p>
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/ColBreakz - Mind Control.mp3">长时间加载不出来请点我</a></center></H4></p>
  <center><embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="250" height="75" /> </center>
