--- a/1.md
+++ b/1.md
@@ -9,7 +9,7 @@
       <center><audio src="K-391 - Summertime.mp3" controls="controls" type="audio/mpeg"></audio> </center>
 <p><a> <center>2.ColBreakz - Mind Control </center></a></p>
       <p><h4><center><a href="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/ColBreakz - Mind Control.mp3">长时间加载不出来请点我</a></center></H4></p>
- <center><embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="250" height="75" /> </center>
+ <center><audio src="ColBreakz - Mind Control.mp3" type="audio/mpeg"></audio> </center>
 <P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
       <P><h1><center>音乐MV</center></h1></P>
       <P><a><center>1.waiting for love</center></a></P>
