--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
-<p><center><h1>404 NOT FOUND</H1></CENTER></P>
-<p><center><h3>对不起，我们这边出了问题，无法完成您请求的操作。</h3</center></p>
+<p><center><h1>404 NOT FOUND</h1></center></P>
+<p><center><h3>对不起，我们这边出了问题，无法完成您请求的操作。</h3></center></p>
 <p><center><h3>如果致电技术人员，请向它们提供以下信息：</h3></center></p>
 <p><center><h3>ERROR_PAGES_NOT_FOUND_404</H3></center></p>
 <p><center><h3>主站:https://windows7xiaogeng-bilibili.github.io/w7xg.github.io</h3></center></p>
