--- a/7.md
+++ b/7.md
@@ -10,7 +10,7 @@
         <p><h3><center><a href="TN.mp4">分流节点1</a></center></h3></p>
         <p><h3><center><a href="404.html">分流节点2（未开放）</a></center></h3></p>
         <p><h4><a href="6.html">上一篇：【镇站之宝】跟我走吧别害怕</a></h4></p>
-        <p><h4><a href="8.html">下一篇：【镇站之宝】baby</a></h4></p>
+        <p><h4><a href="8.html">下一篇：hosts文件位置</a></h4></p>
     </div>
  </body>
 </html>
