--- a/8.md
+++ b/8.md
@@ -1,7 +1,7 @@
 <p><center><h1>hosts文件存放位置</h1></center></p>
 <p><center><h3>安卓:/system/etc/hosts</h3></center></p>
 <p><center><h3>windows:c:/windows/system32/drives/etc/hosts</h3></center></p>
-<p><center><h3>由于最近github被墙比较严重，导致打开本网页和视频音乐比较慢，请修改hosts已达到访问和提速的效果，希望github尽快修复。</h3></center></p>
 <p><center><h3>linux:/etc/hosts</h3></center></p>
+<p><center><h3>由于最近github被墙比较严重，导致打开本站网页和视频音乐比较慢，请修改hosts已达到访问和提速的效果，希望github尽快修复。</h3></center></p>
 <p><h4><a href="7.html">上一篇：【镇站之宝】the nights</h4><p>
 <p><h4><a href="9.html">上一篇：【镇站之宝】baby</h4><p>
