--- a/8.md
+++ b/8.md
@@ -4,5 +4,5 @@
 <p><center><h3>linux:/etc/hosts</h3></center></p>
 <p><center><h3>由于最近github被墙比较严重，导致打开本站网页和视频音乐比较慢，请修改hosts已达到访问和提速的效果，希望github尽快修复。</h3></center></p>
 <p><center><H3>hosts地址http://blog.yoqi.me/lyq/16489.html</h3></center></p>
-<p><h4><a href="7.html">上一篇：【镇站之宝】the nights</h4><p>
-<p><h4><a href="9.html">上一篇：【镇站之宝】baby</h4><p>
+<p><h4><a href="7.html">上一篇：【镇站之宝】the nights</h4></p>
+<p><h4><a href="9.html">上一篇：【镇站之宝】baby</h4></p>
