--- a/2.md
+++ b/2.md
@@ -22,6 +22,12 @@
   <p>最后，祝大家折腾愉快，折腾成功！</p>
       <p><h4><a href="1.html">上一篇：【置顶】音乐集锦</a></H4></p>
  <p><h4><a href="3.html">下一篇：【it之家】Windows10 20H2，开始菜单的新变化</a></H4></p>
+ <p><h2>是否在寻找其他内容？</h2></p>
+<p><h4><a href="index.html">主站</a></h4></p>
+<p><h4><a href="English.html">English</a></h4></p>
+ <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
+ <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
+ <p>此页面已停止更新，最后更新日期2020年8月3日19：14</p>
   </div>
  </body>
 </html>
