--- a/3.md
+++ b/3.md
@@ -17,6 +17,12 @@
   <p>Windows 10 20H2更新将包括新的“开始”菜单，Alt-Tab多任务改进和基于Chromium的Microsoft Edge浏览器。它还将包括Windows 10版本2004的最新累积更新中提供的修复程序。</p>
       <p><h4><a href="2.html">上一篇：关于黑苹果安装和配置的总结</a></H4></p>
  <p><h4><a href="4.html">下一篇：【哲♂学】waiting for love</a></H4></p>
+ <p><h2>是否在寻找其他内容？</h2></p>
+<p><h4><a href="index.html">主站</a></h4></p>
+<p><h4><a href="English.html">English</a></h4></p>
+ <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
+ <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
+ <p>此页面已停止更新，最后更新日期2020年8月3日19:14</p>
       </div>
 </body>
 </html>
