--- a/5.md
+++ b/5.md
@@ -11,6 +11,11 @@
         <p><h3><center><a href="https://www.bilibili.com/video/BV1GW411g7mc">分流节点2</a></center></h3></p>
         <p><h4><a href="4.html">上一篇：【哲♂学】waiting for love</a></h4></p>
         <p><h4><a href="6.html">下一篇：【镇站之宝】跟我走吧别害怕</a></h4></p>
+        <p><h2>是否在寻找其他内容？</h2></p>
+<p><h4><a href="index.html">主站</a></h4></p>
+<p><h4><a href="English.html">English</a></h4></p>
+ <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
+ <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
     </div>
  </body>
 </html>
