--- a/6.md
+++ b/6.md
@@ -11,6 +11,11 @@
         <p><h3><center><a href="404.html">分流节点2（未开放）</a></center></h3></p>
         <p><h4><a href="5.html">上一篇：【四千万合影】我的烤面筋，融化你的心</a></h4></p>
         <p><h4><a href="7.html">下一篇：【镇站之宝】the nights</a></h4></p>
+        <p><h2>是否在寻找其他内容？</h2></p>
+<p><h4><a href="index.html">主站</a></h4></p>
+<p><h4><a href="English.html">English</a></h4></p>
+ <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
+ <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
     </div>
  </body>
 </html>
