--- a/8.md
+++ b/8.md
@@ -6,3 +6,8 @@
 <p><center><H3>hosts地址http://blog.yoqi.me/lyq/16489.html</h3></center></p>
 <p><h4><a href="7.html">上一篇：【镇站之宝】the nights</h4></p>
 <p><h4><a href="9.html">上一篇：【镇站之宝】baby</h4></p>
+<p><h2>是否在寻找其他内容？</h2></p>
+<p><h4><a href="index.html">主站</a></h4></p>
+<p><h4><a href="English.html">English</a></h4></p>
+ <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
+ <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
