--- a/1.md
+++ b/1.md
@@ -21,7 +21,7 @@
 <P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
        <p><h4><a href="0.html">上一篇：【置顶】关于网站</a></H4></p>
  <p><h4><a href="2.html">下一篇：关于黑苹果安装和配置的一些总结</a></H4></p>
- <p><h2>是否在寻找其他内容？</h2></p>
+<p><h2><center>是否在寻找其他内容？</center></h2></p>
 <p><h4><a href="English.html">English？</a></h4></p>
  <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
  <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
