--- a/0.md
+++ b/0.md
@@ -10,7 +10,7 @@
        <p><center>原视频地址https://www.bilibili.com/video/BV1h5411W76o</center></p>
      <p><h4><a href="index.html">上一篇：主页</a></H4></p>
  <p><h4><a href="1.html">下一篇：【置顶】音乐集锦</a></H4></p>
- <p><h2><center>是否在寻找其他内容？</center></h2></p>
+ <p><h2>是否在寻找其他内容？</h2></p>
 <p><h4><a href="index.html">主站</a></h4></p>
 <p><h4><a href="English.html">English</a></h4></p>
  <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
