--- a/4.md
+++ b/4.md
@@ -9,7 +9,7 @@
                      <center><video src="w.mp4" controls width="250" height="150"></video></center>
         <p><h3><center><a href="w.mp4">分流节点1</a></center></h3></p>
         <p><h3><center><a href="https://www.bilibili.com/video/BV1qp411d7C7">分流节点2</a></center></h3></p>
-        <p><h4><a href="3.html">上一篇：it之家】Windows10 20H2，开始菜单的新变化</a></H4></p>
+        <p><h4><a href="video.html">上一篇：网站鬼畜视频合集</a></H4></p>
         <p><h4><a href="5.html">下一篇：【四千万合影】我的烤面筋，融化你的心</a></H4></p>
         <p><h2>是否在寻找其他内容？</h2></p>
 <p><h4><a href="index.html">主站</a></h4></p>
