--- a/404.md
+++ b/404.md
@@ -1,5 +1,14 @@
+<html>
 <p><center><h1>404 NOT FOUND</h1></center></P>
-<p><center><h3>对不起，我们这边出了问题，无法完成您请求的操作。</h3></center></p>
-<p><center><h3>如果致电技术人员，请向它们提供以下信息：</h3></center></p>
-<p><center><h3>ERROR_PAGES_NOT_FOUND_404</H3></center></p>
-<p><center><h3>主站:https://windows7xiaogeng-bilibili.github.io/w7xg.github.io</h3></center></p>
+<p><center><h4>对不起，我们这边出了问题，无法完成您请求的操作。</h4></center></p>
+<p><center><h4>如果致电技术人员，请向它们提供以下信息：</h4></center></p>
+<p><center><h4>ERROR_PAGES_NOT_FOUND_404</h4></center></p>
+<p><a href="index.html">如果你的浏览器没有自动跳转，请点我</a></p>
+<meta http-equiv="refresh" content="5;url=hello.html"> 
+ <head>
+      <meta http-equiv="refresh" content="5;url=index.html"> 
+</head>
+  </html>
+  
+   
+  
