--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@
 <p><center><h4>对不起，我们这边出了问题，无法完成您请求的操作。</h4></center></p>
 <p><center><h4>如果致电技术人员，请向它们提供以下信息：</h4></center></p>
 <p><center><h4>ERROR_PAGES_NOT_FOUND_404</h4></center></p>
-<p><a href="index.html">如果你的浏览器没有自动跳转，请点我</a></p>
+<p><center><a href="index.html">如果你的浏览器没有自动跳转，请点我</a></center></p>
 <meta http-equiv="refresh" content="5;url=hello.html"> 
  <head>
       <meta http-equiv="refresh" content="5;url=index.html"> 
