--- a/2.md
+++ b/2.md
@@ -27,6 +27,13 @@
 <p><h4><a href="English.html">English</a></h4></p>
  <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
  <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
+ <p><h4><a href="video.html">鬼畜视频合集</a></h4></p>
+         <p><h2>关注作者</h2></p>
+         <p><a href="https://github.com/windows7xiaogeng-bilibili"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/github.jpg" width="54" height="54">
+      <a href="mailto:xsxg123456@outlook.com"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/outlook.gif" width="54" height="54">
+        <a href="404.html"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/twitter.jpg" width="54" height="54">
+          <a href="404.html"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/youtube.png" width="54" height="54">  
+        <a href="404.html"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/facebook.jpg" width="54" height="54"> 
  <p>此页面已停止更新，最后更新日期2020年8月3日19：14</p>
   </div>
  </body>
