--- a/8.md
+++ b/8.md
@@ -1,3 +1,8 @@
+<html>
+<head>
+</head>
+<body>
+      <div style="width:100%;margin:0 auto">
 <p><center><h1>hosts文件存放位置</h1></center></p>
 <p><center><h3>安卓:/system/etc/hosts</h3></center></p>
 <p><center><h3>windows:c:/windows/system32/drives/etc/hosts</h3></center></p>
@@ -5,9 +10,20 @@
 <p><center><h3>由于最近github被墙比较严重，导致打开本站网页和视频音乐比较慢，请修改hosts已达到访问和提速的效果，希望github尽快修复。</h3></center></p>
 <p><center><H3>hosts地址http://blog.yoqi.me/lyq/16489.html</h3></center></p>
 <p><h4><a href="7.html">上一篇：【镇站之宝】the nights</h4></p>
-<p><h4><a href="9.html">上一篇：【镇站之宝】baby</h4></p>
+<p><h4><a href="9.html">下一篇：【镇站之宝】baby</h4></p>
 <p><h2>是否在寻找其他内容？</h2></p>
 <p><h4><a href="index.html">主站</a></h4></p>
 <p><h4><a href="English.html">English</a></h4></p>
  <p><h4><a href="P.html">浏览有问题？</a></h4></p> 
  <p><h4><a href="https://space.bilibili.com/443161706">作者B站首页？</a></h4></p> 
+ <p><h4><a href="video.html">鬼畜视频合集</a></h4></p>
+         <p><h2>关注作者</h2></p>
+         <p><a href="https://github.com/windows7xiaogeng-bilibili"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/github.jpg" width="54" height="54">
+      <a href="mailto:xsxg123456@outlook.com"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/outlook.gif" width="54" height="54">
+        <a href="404.html"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/twitter.jpg" width="54" height="54">
+          <a href="404.html"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/youtube.png" width="54" height="54">  
+        <a href="404.html"><img src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/facebook.jpg" width="54" height="54"> 
+         </div>
+           </body>
+         </html>
+         
